新增国际化配置

--- a/env/interface/dev.properties
+++ b/env/interface/dev.properties
@@ -28,5 +28,8 @@ database.testConnectionOnCheckin=false
 ##<!--c3p0全局的PreparedStatements缓存的大小。如果maxStatements与maxStatementsPerConnection均为0，则缓存不生效，只要有一个不为0，则语句的缓存就能生效。如果默认值: 0--> 
 database.maxStatements=0
 
+##国际化配置
+i18n.language=en_US
+
 
 
