--- a/integration-infrastructure/pom.xml
+++ b/integration-infrastructure/pom.xml
@@ -204,5 +204,10 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+		</dependency>
+
 	</dependencies>
 </project>
