--- a/integration-interface/src/main/resources/application.properties
+++ b/integration-interface/src/main/resources/application.properties
@@ -19,3 +19,7 @@ database.breakAfterAcquireFailure=${database.breakAfterAcquireFailure}
 database.testConnectionOnCheckin=${database.testConnectionOnCheckin}
 database.maxStatements=${database.maxStatements}
 
+
+#####################
+i18n.language=${i18n.language}
+
