--- a/integration-interface/.settings/org.eclipse.core.resources.prefs
+++ b/integration-interface/.settings/org.eclipse.core.resources.prefs
@@ -2,5 +2,6 @@ eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
 encoding//src/main/resources/META-INF=UTF-8
+encoding//src/main/resources/i18n=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
