--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<org.springframework-version>4.1.6.RELEASE</org.springframework-version>
+		<!-- <org.springframework-version>3.2.5.RELEASE</org.springframework-version> -->
+		<!-- <org.springframework-version>3.1.2.RELEASE</org.springframework-version> -->
 		<org.hibernate-version>4.2.0.Final</org.hibernate-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 		<junit-version>4.7</junit-version>
@@ -71,6 +73,11 @@
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-web</artifactId>
+				<version>${org.springframework-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-orm</artifactId>
 				<version>${org.springframework-version}</version>
 			</dependency>
 			<dependency>
@@ -246,6 +253,23 @@
 				<scope>test</scope>
 			</dependency>
 
+			<dependency>
+				<groupId>org.quartz-scheduler</groupId>
+				<artifactId>quartz</artifactId>
+				<version>2.2.1</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.quartz-scheduler</groupId>
+				<artifactId>quartz</artifactId>
+				<version>2.2.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.quartz-scheduler</groupId>
+				<artifactId>quartz-jobs</artifactId>
+				<version>2.2.1</version>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
@@ -257,8 +281,8 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.1</version>
 					<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
+						<source>1.7</source>
+						<target>1.7</target>
 						<encoding>UTF-8</encoding>
 					</configuration>
 				</plugin>
